hcm-ui/hcm-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm-frontend
  labels:
    app: hcm-frontend
spec:
  type: ClusterIP
  selector:
    app: hcm-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
