hcm-ui/hcm-frontend/k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm-frontend
  labels:
    app: hcm-frontend
spec:
  type: ClusterIP
  selector:
    app: hcm-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hcm-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hcm-frontend
                port:
                  number: 3000
